# OpenAL_tinkering

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
docker/: Dockerfile  README.md  build.bash  run.bash
src/: alut_demo.cc  main.cc
